chore: rework project with uv, ruff, mypy, boto3-stubs and update python (+1 squashed commit)
